Thu Mar 26 12:22:06 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/yaml/rubytypes.rb (String#is_binary_data?): TAB would be
	  usually considered to be included in text data.

	* lib/rdoc/parser.rb (RDoc::Parser.binary?): blksize may be nil
	  and is irrelevant to whether a file is binary.  copied from
	  above since TAB and newlines would be usually considered to be
	  included in text data.

Thu Mar 26 11:33:13 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/ri/paths.rb (RDoc::RI::Paths): considers
	  --program-prefix and --program-suffix.  reapplied r19923.

Wed Mar 25 07:45:12 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (target_alias): replaces cpu with universal too.

	* configure.in (target): replaces cpu with arch by --with-arch.

	* mkconfig.rb (TOPDIR): chops arch in config instead of
	  RUBY_PLATFORM which varies on universal_binary.

	* mkconfig.rb (MAJOR, MINOR, TEENY): reads from version.h always.

Tue Mar 24 19:23:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_CHECK_SIZEOF): need to include $4.

Tue Mar 24 17:08:52 2009  Akinori MUSHA  <knu@iDaemons.org>

	* io.c (rb_io_inspect): Cannot access fptr->fd if fptr is NULL.
	  This fixes a coredump caused by: ruby -e "class X < IO; def
	  initialize; end; end; p X.new.inspect"

Mon Mar 23 22:01:00 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (time_timespec): use NUM2TIMET.
	  (time_s_at): ditto.

Mon Mar 23 21:52:26 2009  Akinori MUSHA  <knu@iDaemons.org>

	* process.c (Init_process): Better patch for eliminating an
	  "unused variable".

Mon Mar 23 21:41:14 2009  Akinori MUSHA  <knu@iDaemons.org>

	* ext/dbm/dbm.c (fdbm_initialize): Make the file variable
	  volatile, because FilePathValue() currently does not protect the
	  given variable from GC. (Probably it should)

	* ext/sdbm/init.c (fsdbm_initialize): Ditto.

Mon Mar 23 19:22:14 2009  Akinori MUSHA  <knu@iDaemons.org>

	* file.c (rb_file_s_lstat): Back out.
